add first image

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <img src="zine1-thumbnail.jpg" alt="Zine 1 Cover">
             <h2>Title of Zine 1</h2>
             <p>A short description of Zine 1. Explore this unique creation.</p>
-            <a href="zine1.pdf" download>Download Zine</a>
+            <a href="imgs/20250110_121309.jpg" download>Download Zine</a>
         </div>
 
         <div class="zine">
