add first img thumbnail

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <main>
         <div class="zine">
-            <img src="zine1-thumbnail.jpg" alt="Zine 1 Cover">
+            <img src="imgs/20250110_121309.jpg" alt="Zine 1 Cover">
             <h2>Title of Zine 1</h2>
             <p>A short description of Zine 1. Explore this unique creation.</p>
             <a href="imgs/20250110_121309.jpg" download>Download Zine</a>
